Add demo scripts for 'any', 'unknown', and 'never' types; update type assertion comments

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="/unionTypes/union.js"></script>
     <script src="/intersectionTypes/intersection.js"></script>
     <script src="/typeAsserions/typeAssertions.js"></script> 
+    <script src="/any, unknown, never/demo.js"></script>
 </body>
 </html>
