Add console logs for better debugging and understanding of code sections; update index.html to include new scripts

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <script src="/intersectionTypes/intersection.js"></script>
     <script src="/typeAsserions/typeAssertions.js"></script> 
     <script src="/any, unknown, never/demo.js"></script>
+    <script src="/enum-string-litterals/enum.js"></script>
+    <script src="/enum-string-litterals/string-litterals.js"></script>
+    <script src="/types-interface/interface.js"></script>
+    <script src="/types-interface/types.js"></script>
 </body>
 </html>
