add new theme generics

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <script src="/enum-string-litterals/string-litterals.js"></script>
     <script src="/types-interface/interface.js"></script>
     <script src="/types-interface/types.js"></script>
+    <script src="/generics/generic.js"></script>
 </body>
 </html>
